--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 PORT=
 
 ## Database params
-DATABASE_HOST=
-DATABASE_PORT=
-DATABASE_ROOT_PASSWORD=
+DATABASE_URL=
 DATABASE_NAME=
 DATABASE_USER=
 DATABASE_PASSWORD=
