--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json --detectOpenHandles",
     "db:init": "docker compose up -d",
+    "db:migrate": "pnpm dlx prisma migrate dev --name init",
     "db:stop": "docker compose down"
   },
   "dependencies": {
@@ -58,6 +59,7 @@
     "eslint-plugin-prettier": "5.0.1",
     "jest": "29.5.0",
     "prettier": "3.0.0",
+    "prisma": "5.22.0",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
     "ts-jest": "29.1.0",
