--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/swagger": "8.0.3",
     "@nestjs/typeorm": "10.0.2",
+    "@prisma/client": "5.22.0",
     "aws-lambda": "1.0.7",
     "axios": "^1.7.7",
     "class-transformer": "0.5.1",
