--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
     "jest": "29.5.0",
+    "nestjs-zod": "4.2.0",
     "prettier": "3.0.0",
     "prisma": "5.22.0",
     "source-map-support": "0.5.21",
@@ -68,7 +69,8 @@
     "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zod": "3.23.8"
   },
   "jest": {
     "moduleFileExtensions": [
