--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "axios": "^1.7.7",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
-    "date-fns": "4.1.0",
+    "dayjs": "1.11.13",
     "esbuild-plugin-env": "1.1.1",
     "mysql2": "3.11.4",
     "reflect-metadata": "0.2.0",
