--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "dayjs": "1.11.13",
     "esbuild-plugin-env": "1.1.1",
     "mysql2": "3.11.4",
+    "nestjs-pino": "4.1.0",
+    "pino-http": "10.3.0",
+    "pino-pretty": "13.0.0",
     "reflect-metadata": "0.2.0",
     "rxjs": "7.8.1",
     "typeorm": "0.3.20"
