--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@nestjs/mapped-types": "2.0.5",
     "@nestjs/platform-express": "10.0.0",
     "@nestjs/swagger": "8.0.3",
-    "@nestjs/typeorm": "10.0.2",
     "@prisma/client": "5.22.0",
     "aws-lambda": "1.0.7",
     "axios": "^1.7.7",
@@ -43,8 +42,7 @@
     "pino-http": "10.3.0",
     "pino-pretty": "13.0.0",
     "reflect-metadata": "0.2.0",
-    "rxjs": "7.8.1",
-    "typeorm": "0.3.20"
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "10.0.0",
