--- a/jest.config.json
+++ b/jest.config.json
@@ -1,17 +1,14 @@
 {
-  "moduleFileExtensions": [
-    "js",
-    "json",
-    "ts"
-  ],
-  "rootDir": "src",
+  "moduleFileExtensions": ["js", "json", "ts"],
+  "rootDir": ".",
   "testRegex": ".*\\.spec\\.ts$",
   "transform": {
     ".+\\.(t|j)s$": "ts-jest"
   },
-  "collectCoverageFrom": [
-    "**/*.(t|j)s"
-  ],
+  "collectCoverageFrom": ["**/*.(t|j)s"],
   "coverageDirectory": "../coverage",
-  "testEnvironment": "node"
+  "testEnvironment": "node",
+  "moduleNameMapper": {
+    "^@/(.*)$": "<rootDir>/src/$1"
+  }
 }
