build: edit command scripts

--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:unit": "jest --config ./jest.config.json --detectOpenHandles",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./jest-e2e.config.json --detectOpenHandles",
+    "test": "pnpm test:unit && pnpm test:e2e",
+    "test:watch": "pnpm test:unit --watchAll",
+    "test:cov": "pnpm test:unit --coverage",
+    "test:unit": "jest --config ./jest.config.json",
+    "test:e2e": "jest --config ./jest-e2e.config.json",
     "db:init": "docker compose up -d",
     "db:migrate": "pnpm dlx prisma migrate dev --name init",
     "db:stop": "docker compose down"
