--- a/package.json
+++ b/package.json
@@ -23,42 +23,42 @@
     "db:stop": "docker compose down"
   },
   "dependencies": {
-    "@nestjs/axios": "^3.1.1",
-    "@nestjs/common": "10.0.0",
+    "@nestjs/axios": "3.1.1",
+    "@nestjs/common": "10.0.5",
     "@nestjs/config": "3.3.0",
-    "@nestjs/core": "10.0.0",
+    "@nestjs/core": "10.0.5",
     "@nestjs/mapped-types": "2.0.5",
-    "@nestjs/platform-express": "10.0.0",
+    "@nestjs/platform-express": "10.0.5",
     "@nestjs/swagger": "8.0.3",
     "@prisma/client": "5.22.0",
-    "axios": "^1.7.7",
+    "axios": "1.7.7",
     "dayjs": "1.11.13",
     "nestjs-pino": "4.1.0",
     "pino-http": "10.3.0",
     "pino-pretty": "13.0.0",
-    "reflect-metadata": "0.2.0",
+    "reflect-metadata": "0.2.2",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.0.0",
-    "@nestjs/schematics": "10.0.0",
-    "@nestjs/testing": "10.0.0",
+    "@nestjs/cli": "10.0.5",
+    "@nestjs/schematics": "10.0.3",
+    "@nestjs/testing": "10.0.5",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.2",
-    "@types/node": "20.3.1",
+    "@types/node": "20.3.3",
     "@types/supertest": "6.0.0",
-    "@typescript-eslint/eslint-plugin": "8.0.0",
-    "@typescript-eslint/parser": "8.0.0",
+    "@typescript-eslint/eslint-plugin": "8.0.1",
+    "@typescript-eslint/parser": "8.0.1",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.1",
     "jest": "29.5.0",
     "nestjs-zod": "4.2.0",
-    "prettier": "3.0.0",
+    "prettier": "3.0.3",
     "prisma": "5.22.0",
     "supertest": "7.0.0",
-    "ts-jest": "29.1.0",
-    "typescript": "5.1.3",
+    "ts-jest": "29.1.5",
+    "typescript": "5.1.6",
     "zod": "3.23.8"
   }
 }
