--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "Brando Vidal",
   "scripts": {
-    "deps": "pnpm db:stop && pnpm db:init",
+    "deps": "pnpm db:stop && pnpm db:init && pnpm db:migrate",
     "build": "nest build",
     "dev": "nest start --watch",
     "start": "nest start",
@@ -20,16 +20,17 @@
     "test:e2e": "jest --config ./jest-e2e.config.json",
     "db:init": "docker compose up -d",
     "db:migrate": "pnpm dlx prisma migrate dev --name init",
-    "db:stop": "docker compose down"
+    "db:stop": "docker compose down",
+    "clean": "rm -rf node_modules/ dist/ pnpm-lock.yaml"
   },
   "dependencies": {
-    "@nestjs/axios": "3.1.1",
-    "@nestjs/common": "10.0.5",
+    "@nestjs/axios": "3.1.2",
+    "@nestjs/common": "10.4.8",
     "@nestjs/config": "3.3.0",
-    "@nestjs/core": "10.0.5",
-    "@nestjs/mapped-types": "2.0.5",
-    "@nestjs/platform-express": "10.0.5",
-    "@nestjs/swagger": "8.0.3",
+    "@nestjs/core": "10.4.8",
+    "@nestjs/mapped-types": "2.0.6",
+    "@nestjs/platform-express": "10.4.8",
+    "@nestjs/swagger": "8.0.7",
     "@prisma/client": "5.22.0",
     "axios": "1.7.7",
     "dayjs": "1.11.13",
@@ -40,21 +41,21 @@
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "10.0.5",
-    "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.0.5",
+    "@nestjs/cli": "10.4.7",
+    "@nestjs/schematics": "10.2.3",
+    "@nestjs/testing": "10.4.8",
     "@types/express": "5.0.0",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.3.3",
-    "@types/supertest": "6.0.0",
-    "@typescript-eslint/eslint-plugin": "8.0.1",
+    "@types/jest": "29.5.14",
+    "@types/node": "20.17.6",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.0.1",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.1",
-    "jest": "29.5.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "jest": "29.7.0",
     "nestjs-zod": "4.2.0",
-    "prettier": "3.0.3",
+    "prettier": "3.3.3",
     "prisma": "5.22.0",
     "supertest": "7.0.0",
     "ts-jest": "29.1.5",
