--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "Brando Vidal",
   "scripts": {
-    "deps": "pnpm db:stop && pnpm db:init && pnpm db:migrate",
+    "deps": "pnpm run db:stop && pnpm run db:init && pnpm run db:migrate",
     "build": "nest build",
     "dev": "nest start --watch",
     "start": "nest start",
@@ -13,15 +13,16 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "pnpm test:unit && pnpm test:e2e",
-    "test:watch": "pnpm test:unit --watchAll",
-    "test:cov": "pnpm test:unit --coverage",
+    "test": "pnpm run test:unit && pnpm run test:e2e",
+    "test:watch": "pnpm run test:unit --watchAll",
+    "test:cov": "pnpm run test:unit --coverage",
     "test:unit": "jest --config ./jest.config.json",
     "test:e2e": "jest --config ./jest-e2e.config.json",
     "db:init": "docker compose up -d",
     "db:migrate": "pnpm dlx prisma migrate dev --name init",
     "db:stop": "docker compose down",
-    "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml"
+    "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml prisma/migrations",
+    "prepare": ""
   },
   "dependencies": {
     "@nestjs/axios": "3.1.2",
