--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "db:migrate": "pnpm dlx prisma migrate dev --name init",
     "db:stop": "docker compose down",
     "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml prisma/migrations",
-    "prepare": ""
+    "prepare": "husky"
   },
   "dependencies": {
     "@nestjs/axios": "3.1.2",
@@ -54,6 +54,7 @@
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.2.1",
+    "husky": "9.1.6",
     "jest": "29.7.0",
     "nestjs-zod": "4.2.0",
     "prettier": "3.3.3",
