build: load from dev and test env

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "deps": "pnpm run db:stop && pnpm run db:init && pnpm run db:migrate",
     "build": "nest build",
-    "dev": "nest start --watch",
+    "dev": "dotenv -e .env.dev -- nest start --watch",
     "start": "nest start",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "dotenv -e .env.dev -- nest start --debug --watch",
     "start:prod": "node dist/main",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
@@ -17,11 +17,13 @@
     "test:watch": "pnpm run test:unit --watchAll",
     "test:cov": "pnpm run test:unit --coverage",
     "test:unit": "jest --config ./jest.config.json",
-    "test:e2e": "jest --config ./jest-e2e.config.json",
+    "test:e2e": "dotenv -e .env.test -- jest --config ./jest-e2e.config.json",
     "db:init": "docker compose up -d",
-    "db:migrate": "pnpm dlx prisma migrate dev --name init",
+    "db:migrate": "pnpm run db:migrate:dev && pnpm run db:migrate:test",
+    "db:migrate:dev": "dotenv -e .env.dev -- pnpm dlx prisma migrate dev --name dev",
+    "db:migrate:test": "dotenv -e .env.test -- pnpm dlx prisma migrate dev --name test",
     "db:stop": "docker compose down",
-    "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml prisma/migrations",
+    "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml",
     "prepare": "husky"
   },
   "dependencies": {
@@ -51,6 +53,7 @@
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
+    "dotenv-cli": "7.4.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.2.1",
