test: implement vitest

--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "pnpm run test:unit && pnpm run test:e2e",
-    "test:watch": "pnpm run test:unit --watchAll",
+    "test:watch": "pnpm run test:unit",
+    "test:ci": "pnpm run test:unit --run",
     "test:cov": "pnpm run test:unit --coverage",
-    "test:unit": "jest --config ./jest.config.json",
-    "test:e2e": "dotenv -e .env.test -- jest --config ./jest-e2e.config.json",
+    "test:unit": "vitest --project unit",
+    "test:e2e": "dotenv -e .env.test -- vitest --project e2e",
     "db:init": "docker compose up -d",
     "db:migrate": "pnpm run db:migrate:dev && pnpm run db:migrate:test",
     "db:migrate:dev": "dotenv -e .env.dev -- pnpm dlx prisma migrate dev --name dev",
@@ -47,12 +48,14 @@
     "@nestjs/cli": "10.4.7",
     "@nestjs/schematics": "10.2.3",
     "@nestjs/testing": "10.4.8",
+    "@swc/core": "1.9.2",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
     "@types/node": "22.9.0",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
+    "@vitest/coverage-v8": "2.1.5",
     "dotenv-cli": "7.4.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
@@ -65,7 +68,13 @@
     "rimraf": "6.0.1",
     "supertest": "7.0.0",
     "ts-jest": "29.2.5",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
     "typescript": "5.4.5",
+    "unplugin-swc": "1.5.1",
+    "vite-tsconfig-paths": "5.1.2",
+    "vitest": "2.1.5",
     "zod": "3.23.8"
   }
 }
