--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,14 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
+    "target": "ES2022",
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"]
     },
+    "types": ["vitest/globals"],
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
