build: edit test:ci in pre push

--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "pnpm run test:unit && pnpm run test:e2e",
-    "test:watch": "pnpm run test:unit",
-    "test:ci": "pnpm run test:unit --run",
+    "test": "dotenv -e .env.test -- vitest --project unit --project e2e",
+    "test:ui": "dotenv -e .env.test -- vitest --project unit --project e2e --ui",
+    "test:ci": "dotenv -e .env.test -- vitest --project unit --project e2e --run",
     "test:cov": "pnpm run test:unit --coverage",
     "test:unit": "vitest --project unit",
     "test:e2e": "dotenv -e .env.test -- vitest --project e2e",
