--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
     "@vitest/coverage-v8": "2.1.5",
+    "@vitest/ui": "2.1.5",
     "dotenv-cli": "7.4.2",
     "eslint": "8.57.1",
     "eslint-config-prettier": "9.0.0",
