--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "db:migrate:dev": "dotenv -e .env.dev -- pnpm dlx prisma migrate dev --name dev",
     "db:migrate:test": "dotenv -e .env.test -- pnpm dlx prisma migrate dev --name test",
     "db:stop": "docker compose down",
-    "clean": "rimraf node_modules/ dist/ pnpm-lock.yaml",
+    "clean": "rimraf node_modules/ dist/ coverage/ pnpm-lock.yaml",
     "prepare": "husky"
   },
   "dependencies": {
@@ -39,10 +39,12 @@
     "axios": "1.7.7",
     "dayjs": "1.11.13",
     "nestjs-pino": "4.1.0",
+    "nestjs-zod": "4.2.0",
     "pino-http": "10.3.0",
     "pino-pretty": "13.0.0",
     "reflect-metadata": "0.2.2",
-    "rxjs": "7.8.1"
+    "rxjs": "7.8.1",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "10.4.7",
@@ -61,18 +63,13 @@
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.2.1",
     "husky": "9.1.6",
-    "nestjs-zod": "4.2.0",
     "prettier": "3.3.3",
     "prisma": "5.22.0",
     "rimraf": "6.0.1",
     "supertest": "7.0.0",
-    "ts-loader": "9.5.1",
-    "ts-node": "10.9.2",
-    "tsconfig-paths": "4.2.0",
     "typescript": "5.4.5",
     "unplugin-swc": "1.5.1",
     "vite-tsconfig-paths": "5.1.2",
-    "vitest": "2.1.5",
-    "zod": "3.23.8"
+    "vitest": "2.1.5"
   }
 }
