docs: update commands and steps to init project

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
+### Puerto del servidor
 PORT=
-
-## Database params
+### Endpoint de la base de datos
 DATABASE_URL=
+### Nombre de la base de datos.
 DATABASE_NAME=
+### Nombre del usuario de la base de datos.
 DATABASE_USER=
+### Contraseña del usuario de la base de datos.
 DATABASE_PASSWORD=
 
