--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@prisma/client": "5.22.0",
     "axios": "1.7.7",
     "dayjs": "1.11.13",
+    "just-is-empty": "3.4.1",
     "nestjs-pino": "4.1.0",
     "nestjs-zod": "4.2.0",
     "pino-http": "10.3.0",
