--- a/package.json
+++ b/package.json
@@ -33,14 +33,18 @@
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.8",
     "@nestjs/mapped-types": "2.0.6",
+    "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.4.8",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "5.22.0",
     "axios": "1.7.7",
     "dayjs": "1.11.13",
+    "express-session": "1.18.1",
     "just-is-empty": "3.4.1",
     "nestjs-pino": "4.1.0",
     "nestjs-zod": "4.2.0",
+    "passport": "0.7.0",
+    "passport-local": "1.0.0",
     "pino-http": "10.3.0",
     "pino-pretty": "13.0.0",
     "reflect-metadata": "0.2.2",
