--- a/package.json
+++ b/package.json
@@ -32,19 +32,20 @@
     "@nestjs/common": "10.4.8",
     "@nestjs/config": "3.3.0",
     "@nestjs/core": "10.4.8",
+    "@nestjs/jwt": "10.2.0",
     "@nestjs/mapped-types": "2.0.6",
     "@nestjs/passport": "10.0.3",
     "@nestjs/platform-express": "10.4.8",
     "@nestjs/swagger": "7.4.2",
     "@prisma/client": "5.22.0",
     "axios": "1.7.7",
+    "bcrypt": "5.1.1",
     "dayjs": "1.11.13",
-    "express-session": "1.18.1",
     "just-is-empty": "3.4.1",
     "nestjs-pino": "4.1.0",
     "nestjs-zod": "4.2.0",
     "passport": "0.7.0",
-    "passport-local": "1.0.0",
+    "passport-jwt": "4.0.1",
     "pino-http": "10.3.0",
     "pino-pretty": "13.0.0",
     "reflect-metadata": "0.2.2",
@@ -56,8 +57,10 @@
     "@nestjs/schematics": "10.2.3",
     "@nestjs/testing": "10.4.8",
     "@swc/core": "1.9.2",
+    "@types/bcrypt": "5.0.2",
     "@types/express": "5.0.0",
     "@types/node": "22.9.0",
+    "@types/passport-jwt": "4.0.1",
     "@types/supertest": "6.0.2",
     "@typescript-eslint/eslint-plugin": "8.14.0",
     "@typescript-eslint/parser": "8.14.0",
