chore: declare global types and use config service

--- a/.env.example
+++ b/.env.example
@@ -10,4 +10,5 @@ DATABASE_NAME=
 DATABASE_USER=
 ### Contraseña del usuario de la base de datos.
 DATABASE_PASSWORD=
-
+### Clave secreata para JWT
+JWT_SECRET_KEY=
