fix: use process env to load jwt token

--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,7 @@ DATABASE_NAME=
 DATABASE_USER=
 ### Contraseña del usuario de la base de datos.
 DATABASE_PASSWORD=
-### Clave secreata para JWT
+### Clave secreta para JWT
 JWT_SECRET_KEY=
+### Clave token para llamadas endpoint en local
+APP_TOKEN=
