--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,5 @@ DATABASE_USER=
 DATABASE_PASSWORD=
 ### Clave secreta para JWT
 JWT_SECRET_KEY=
-### Clave token para llamadas endpoint en local
+### Clave token para llamadas endpoint en local (solo agregar en .env)
 APP_TOKEN=
